syntax ="proto3";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";
import "pb/log/log.proto";
option go_package="github.com/iansmith/parigot/api/proto/g/pb/protosupport;protosupport";
package pb.protosupport;


extend google.protobuf.ServiceOptions {
  optional bool no_package = 543211;
  optional bool kernel_service = 543214;
  optional string wasm_service_name = 543210;
}
extend google.protobuf.MethodOptions {
  optional string wasm_method_name = 543210;
  optional bool abi_call = 543212;
}
extend google.protobuf.FieldOptions {
  optional string wasm_field_name = 543210;
}

extend google.protobuf.FileOptions {
  optional bool abi = 543210;
}
extend google.protobuf.MessageOptions {
  optional string wasm_message_name = 543210;
}

// KernelErrorId is used to signal errors that occured inside the operating environment 
// itself.  When one of these errors is returned, typically the processing along that
// path of control should terminate.
message KernelErrorId {
  uint64 high = 1;
  uint64 low = 2;
}

// DeveloperErrorId is used to signal errors that are defined by the developer.
message DeveloperErrorId {
  uint64 high = 1;
  uint64 low = 2;
}

// ServiceId is a type of Id that is given to _clients_ of a particular service.  With this
// information (really, capability) the holder of the ServiceId can make calls on the methods
// of that service.  In unixish terms, this id might be the equivalent of a hostname and port pair.
message ServiceId {
  uint64 high = 1;
  uint64 low = 2;
}

// DeveloperId is a type of Id that is defined by the developer.
message DeveloperId {
  uint64 high = 1;
  uint64 low = 2;
}

// MethodId is a type of Id that is given to _implementations_ of a particular service.  A "server"
// for a service will have one MethodId for each method that it can respond to. The kernel 
// will inform the server which method was called by using a MethodId.  In unixish terms,
// this id might be the equivalent of a "handler" in a web server that handles a particular
// type of request.
message MethodId {
  uint64 high = 1;
  uint64 low = 2;
}

// CallId is an id given to the implementations of methods of a service.  This id represents
// a particular call instance, e.g. a single call from a single client program.  There may be
// many CallIds outstanding at any given time for a service or for any method of that service.
// The kernel uses the CallId to distinguish between different invocations of a given method.
// In unixish terms, this might be the equivalent of a connected file descriptor on a 
// socket that will be closed when the single method invocation ends.
message CallId {
  uint64 high = 1;
  uint64 low = 2;
}

message Lower {
  map<string,string> entryLower = 1;
}

message Pctx {
  map<string,Lower> entryUpper =1;
  google.protobuf.Timestamp now = 2;
}